0.9616_02 2022-07-04
  [New Featres]
    * Add spvm_warn to native API
  [BUG FIX]
    * Fix the bug that quiet and force option of the config of resource don't work well.
0.9616 2022-07-01
  [New Featres]
    * Add to_bin method to SPVM::BlessedObject::String.
  [CHANGES]
    * Removed "Bug Report" and "Support" section from the output of spvmdist command.
  [NON BACKWORD COMPATIBLE CHANGES]
    * If a Perl scalar value is passed to SPVM string type, sv_utf8_encode don't be performed
      because this is needed to pass 8bit character(128-255) such as "\xff" to SPVM as it is.
0.9615 2022-06-30
  [CHANGES]
    * Improve the pod that spvmdist generates.
  [BUG FIX]
    * Fix the bug that SPVM::Builder::Config doesn't use SPVM::Builder::Resource.
  [NON BACKWORD COMPATIBLE CHANGES]
    * Remove unused and undocumented protected descriptor.
0.9614 2022-06-29
  [CHANGES]
  * The parent class must be a class type and non-pointer type.
  * The name of the parant class must be different from the name of the class.
  * The all super classes must be different from its own class. Recursive inheritance isn't allowed
  * Remove MANIFEST from .gitignore that is generated by spvmdist.
  * lib_dirs of SPVM::Builder::Config is always added to link command.
  * Add SPVM::Builder::LibInfo module.
  * libs, add_libs, add_static_libs of SPVM::Builder::Config can receive SPVM::Builder::LibInfo object.
  * Add lib_infos to SPVM::Builder::LinkInfo.
  [NON BACKWORD COMPATIBLE CHANGES]
  * Remove non-documented lib_link_abs from SPVM::Builder::Config.
  * native library is linked as relative path, not absolute pass by default.
  * Remove add_dynamic_libs from SPVM::Builder::Config.
  * Remove type option of the hash reference of add_libs method of SPVM::Builder::Config.
  * libs, add_libs, add_static_libs of SPVM::Builder::Config can't receive a hash reference.
  * object_infos of SPVM::Builder::LinkInfo don't contains library files.
0.9613 2022-06-27
  [CHANGE]