@@ -194,7 +194,6 @@ sub build_dynamic_lib_dist {
   my $cc_native = SPVM::Builder::CC->new(
     build_dir => $self->{build_dir},
     builder => $self,
-    quiet => 0,
   );
   
   my $method_names = $self->get_method_names($class_name, $category);
@@ -207,7 +206,7 @@ sub build_and_bind_dynamic_lib_at_runtime {
   my $cc = SPVM::Builder::CC->new(
     build_dir => $self->{build_dir},
     builder => $self,
-    quiet => 1,
+    runtime => 1,
   );
   
   my $method_names = $self->get_method_names($class_name, $category);
